kouhai/tests/cases/error/sizeof_unknown_type.kou
fn main():
    print(sizeof(Nope))
